kubernetes/Namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: food-delivery
  labels:
    app.kubernetes.io/part-of: food-delivery
