kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: food-delivery
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: singhharshmeet/foodapp-backend:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 15

          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: food-delivery
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
      protocol: TCP
  type: ClusterIP
